svyStyleGuide/medias/svyStyleGuide.less
// import of the custom servoy theme properties that will import the hidden servoy theme, this imported file is for customizing the default servoy theme properties 
@import 'theme-servoy.less';

// Add your custom less/css to this file you can use the same less properties that are specified in the above properties.less 

.row-title {
	
	> div {
		padding-bottom: 5px;
		margin-bottom: 5px;
		.border-bottom();
	}
}

.row,
.col-content > div {
	margin-top: 5px;
}

.row-content {
	.box();
	padding-left:5px;
	padding-right: 5px;
}

